--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,16 @@ build
 cc
 *.pyc
 *.gch
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+
+# Compiled Dynamic libraries
+*.so
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
